# diskclone

./: CMakeLists.txt  Makefile  README.md  main.c
include/: dos.h  ext.h  gpt.h  hdtd.h  ntfs.h
include/dos/: disk.h  mbr.h
include/ext/: partition.h  scan.h
include/gpt/: disk.h  gpt.h
include/hdtd/: biosdisk.h  bitops.h  config.h  context.h  crc32.h  disk.h  list.h  partition.h  path.h  pthread.h  string-util.h  system.h  version.h
include/ntfs/: partition.h  scan.h
source/dos/: dos-disk.c  dos-op.c
source/ext/: ext-op.c  ext-part.c  ext-scan.c
source/gpt/: gpt-disk.c  gpt-op.c
source/hdtd/: context.c  crc32.c  disk-all.c  disk-op.c  disk.c  error.c  hdtd-imp.h  memory.c  partition.c  pthread.c  string.c
source/ntfs/: ntfs-op.c  ntfs-part.c  ntfs-scan.c
